exam00/ft_strrev/3-0-ft_strrev.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z2r6p14.42.us.org
Darwin 17.4.0 x86_64
$> date
Fri Sep 21 19:10:46 PDT 2018
$> gcc --version
Configured with: --prefix=/Library/Developer/CommandLineTools/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin
$> clang --version
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2018/piscine-c-exam00/exam_20180922/kchenna

= Git history ==================================================================
$> git -C /var/folders/48/85tyfkrn3jg_ht7qz43dhwpm0000gp/T/tmpVIgzuP/user log --pretty='%H - %an, %ad : %s'
210aeb94c444e4e661001110cd98d7a5bb8e4aa6 - Exam 42, Fri Sep 21 19:09:36 2018 -0700 : blah; broken
5a43670a67b5be4cda4b9052196952766daabd7d - Exam 42, Fri Sep 21 18:57:35 2018 -0700 : fixed style
58425b389c4d6f395f5fd66c99ee56a4174db3db - Exam 42, Fri Sep 21 18:56:42 2018 -0700 : maff_revalpha
02f24ec6a9e25fea103dbc4ac8b7c8a5d90ce667 - Exam 42, Fri Sep 21 18:39:59 2018 -0700 : ft_print_numbers
3ba16d2336db124e4214981d829dd1b69658b720 - Exam 42, Fri Sep 21 18:30:28 2018 -0700 : only_a
0841868fd843c86ed2b0d841d4afd0da40ec56e5 - Exam 42, Fri Sep 21 18:24:49 2018 -0700 : only_z
 
= Collected files ==========================================
$> ls -lAR /var/folders/48/85tyfkrn3jg_ht7qz43dhwpm0000gp/T/tmpVIgzuP/user
total 8
-rw-r--r--  1 deepthought  deepthought  1429 Sep 21 19:10 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought   102 Sep 21 19:10 ft_print_numbers
drwxr-xr-x  3 deepthought  deepthought   102 Sep 21 19:10 ft_strrev
drwxr-xr-x  3 deepthought  deepthought   102 Sep 21 19:10 maff_revalpha
drwxr-xr-x  3 deepthought  deepthought   102 Sep 21 19:10 only_a
drwxr-xr-x  3 deepthought  deepthought   102 Sep 21 19:10 only_z

/var/folders/48/85tyfkrn3jg_ht7qz43dhwpm0000gp/T/tmpVIgzuP/user/ft_print_numbers:
total 8
-rw-r--r--  1 deepthought  deepthought  1069 Sep 21 19:10 ft_print_numbers.c

/var/folders/48/85tyfkrn3jg_ht7qz43dhwpm0000gp/T/tmpVIgzuP/user/ft_strrev:
total 8
-rw-r--r--  1 deepthought  deepthought  1089 Sep 21 19:10 ft_strrev.c

/var/folders/48/85tyfkrn3jg_ht7qz43dhwpm0000gp/T/tmpVIgzuP/user/maff_revalpha:
total 8
-rw-r--r--  1 deepthought  deepthought  1305 Sep 21 19:10 maff_revalpha.c

/var/folders/48/85tyfkrn3jg_ht7qz43dhwpm0000gp/T/tmpVIgzuP/user/only_a:
total 8
-rw-r--r--  1 deepthought  deepthought  998 Sep 21 19:10 only_a.c

/var/folders/48/85tyfkrn3jg_ht7qz43dhwpm0000gp/T/tmpVIgzuP/user/only_z:
total 8
-rw-r--r--  1 deepthought  deepthought  999 Sep 21 19:10 only_z.c
 
= ft_strrev ====================================================================
$> gcc -Wextra -Wall -Werror ft_strrev.c main.c -o user_exe 
ft_strrev.c:17:8: error: implicit declaration of function 'size' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
        len = size(str)/size(char);
              ^
ft_strrev.c:17:23: error: expected expression
        len = size(str)/size(char);
                             ^
ft_strrev.c:26:11: error: expected expression
        str[4] = {'a', 'b', 'c', 'd'};
                 ^
3 errors generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
